tests/spec/compile-fail/030_non_copy_assignment_without_move.zn
// category: compile-fail
// profile: freestanding
// purpose: non-Copy assignment moves ownership and the source cannot be reused

module tests.fail.nonCopyAssignmentWithoutMove;

struct Handle {
    id: U32,
}

impl Handle {
    destroy {}
}

fn bad() -> U32 {
    val handle = Handle { id: 1 };
    val copied = handle;
    return handle.id + copied.id; // expected-error: use of moved value
}
